2009-05-18  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11009: External Links get prepended with http://typo3 in the RTEhtmlarea in Firefox 3.0.11/3.5b4

2009-06-02  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11247: No labels in admin panel when editing a content element in the frontend

2009-06-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Reverted fix for bug #2178: It introduces new behavior and leads to extensions depending on patch level releases

2009-06-02  Steffen Kamper  <info@sk-typo3.de>

	* reverted #9849 as this wasn't present in 4.2.0
	* Fixed bug #9849: edit-wideDocument was removed, bring it back

2009-05-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11218: Typo in typo3/init.php

2009-05-22  Oliver Hader  <oliver@typo3.org>

	* Reverted bug #11087 from rev 5442: Selecting more than one item in a selector box is not possible anymore

2009-05-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10861: Eval of double2 doesn't work

2009-05-19  Ingo Renner  <ingo@typo3.org>

	* Follow up to #8561: Checkboxes and labels are aligned badly if in one line (credits Susanne Moog)

2009-05-19  Benjamin Mack  <benni@typo3.org>

	* Fixed #11087 and #6372: TCEForm does not replace the existing element if adding a new element to a field with maxitems=1

2009-05-19  Francois Suter  <francois@typo3.org>

	* Clean up #11118: Reduce memory usage of db_list_extra

2009-05-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8701: Bug: options.moduleMenuCollapsable = 0 doesn't have any effect

2009-05-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10165: FlexForms: wrong mm-relations after copy and localize (thanks to Peter Kuehn)

2009-05-13  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11063: Wrong Content-length header breaks frontend output in some cases (thanks to Georg Kuehnberger)

2009-05-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11053: TYPO3_DB uses $GLOBALS['TYPO3_DB'] instead of $this (thanks to Stefan Geith)
